// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should to list the sequence items in app Should request list of items 1`] = `
[MockFunction] {
  "calls": [
    [],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Should to list the sequence items in app Should request toFetchAPI for get list items by API 1`] = `
[MockFunction] {
  "calls": [
    [
      "https://63f239144f17278c9a22d1cd.mockapi.io/api/v1/item",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
